--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
 
             <li class="link">
-                <a href="" ng-click="saveCalculation()">запомнить вариант</a>
+                <a href="" ng-click="saveCalculation()">+ Запомнить вариант</a>
             </li>
 
             <li class="link" ng-click="toggleCompare()">
