--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li ng-repeat="calculation in data.calculationList" class="offer">
                 <div ng-click="restoreCalculation($index)">
                     <img src="img/car.jpg" height="50"/>
-                    <strong>{{calculation.car.markName}} {{calculation.car.modelName}} Nissan Note FDJFSJLKFUL</strong>
+                    <strong>{{calculation.car.markName}} {{calculation.car.modelName}}</strong>
                     <span>{{ calculation.offer.monthPayment }} руб/мес.</span>
                 </div>
                 <a href="" class="icon-remove" ng-click="delCalculation($index)"></a>
