arrows car-list

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
 
 
-    <a href="" ng-click="show.isMaxPayment=!show.isMaxPayment" class="btn">ОК</a>
+    <a href="" ng-click="toggleMaxPayment()" class="btn">ОК</a>
 </article>
 <!--расчет платежноспобности-->
 
