--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2>Автомобили</h2>
 
     <div class="input-months clearfix">
-        <label>При сроке</label>
+        <label>При увеличении срока на</label>
 
         <div class="input">
             <input type="input" ng-model="upgradeMonths"/>
@@ -98,8 +98,8 @@
                     </div>
                 </li>
             </ul>
-            <a href="" class="arrow-prev" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()"></a>
-            <a href="" class="arrow-next" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()"></a>
+            <!--<a href="" class="arrow-prev" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()"></a>
+            <a href="" class="arrow-next" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()"></a>-->
         </section>
 
 
@@ -117,8 +117,8 @@
                 </li>
 
             </ul>
-            <a href="" class="arrow-prev" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()"></a>
-            <a href="" class="arrow-next" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()"></a>
+            <!--<a href="" class="arrow-prev" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()"></a>
+            <a href="" class="arrow-next" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()"></a>-->
         </section>
 
 
@@ -443,9 +443,18 @@
 
         </div>
 
-        <div class="span4 client-options">
-            <a class="radio-btn  ng-class: {'active': clientRCI}" ng-click="clientRCI=!clientRCI">Клиент RCI</a>
-            <a class="radio-btn  ng-class: {'active': existCRM}" ng-click="existCRM=!existCRM">Есть в CRM</a>
+        <div class="span4">
+            <div class="client-options">
+                <a class="radio-btn  ng-class: {'active': clientRCI}" ng-click="clientRCI=!clientRCI">Клиент RCI</a>
+                <a class="radio-btn  ng-class: {'active': existCRM}" ng-click="existCRM=!existCRM">Есть в CRM</a>
+            </div>
+
+            <div class="input-ip">
+                <label>Остаточный платеж</label>
+
+                <div class="input"><input ng-model="lastPayment"><label>руб.</label></div>
+                <div slider ng-model="lastPayment" min="0" max="200000" step="1000"></div>
+            </div>
         </div>
     </section>
 
@@ -465,12 +474,7 @@
             <div slider ng-model="refinance" min="5000" max="200000" step="1000"></div>
         </div>
 
-        <div class="span4 input-ip">
-            <label>Остаточный платеж</label>
 
-            <div class="input"><input ng-model="lastPayment"><label>руб.</label></div>
-            <div slider ng-model="lastPayment" min="5000" max="200000" step="1000"></div>
-        </div>
     </section>
 
     <section class="noprint" ng-show="!calculation.offer">
@@ -498,8 +502,8 @@
 
 
 </section>
-<div class="noprint" ng-controller="OfferCtrl" ng-show="calculation.offer">
-    <section class="services-choose">
+<div ng-controller="OfferCtrl" ng-show="calculation.offer">
+    <section class="noprint services-choose">
         <h2>Дополнительные сервисы</h2>
 
         <!--    <div class="show-month-price"><label class="checkbox"><input type="checkbox" checked>Показывать стоимость за
@@ -581,7 +585,7 @@
 
     </section>
 
-    <div class="price-line-container">
+    <div class="noprint price-line-container">
         <div class="price-line noprint" id="offerPrice">
             <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
                 }}
@@ -882,7 +886,7 @@
     }
 
 
-    $.fn.followTo = function (abspos, fixpos) {
+    $.fn.followTo = function (abspos, fixpos, fixbottom) {
         var $this = this,
                 $window = $(window);
 
@@ -890,16 +894,31 @@
 
         //pos=$(this).parent().eq().offsetTop;
 
+
         $window.scroll(function (e) {
+
             pos = $this.parent().offset().top - fixpos;
-            if ($window.scrollTop() < pos) {
+
+
+            /*if (pos > ($window.scrollTop() + $window.height() - fixpos )) {
+             $this.css({
+             position: 'fixed',
+             top: "auto",
+             bottom: fixbottom
+             });
+             }
+             else*/
+            if (pos > $window.scrollTop()) {
                 $this.css({
                     position: 'absolute',
+                    bottom: "auto",
                     top: abspos
                 });
-            } else {
+            }
+            else if (pos < $window.scrollTop()) {
                 $this.css({
                     position: 'fixed',
+                    bottom: "auto",
                     top: fixpos
                 });
             }
@@ -907,8 +926,8 @@
     };
 
 
-    $("#carPrice").followTo(0, 60);
-    $("#offerPrice").followTo(0, 104);
+    $("#carPrice").followTo(0, 60, 44);
+    $("#offerPrice").followTo(0, 104, 0);
 
 </script>
 </body>
