--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2>Улучшение</h2>
 
     <div class="input-months clearfix">
-        <label>При сроке</label>
+        <label>При увеличении срока</label>
 
         <div class="input">
             <input type="input" ng-model="upgradeMonths"/>
@@ -91,8 +91,8 @@
         <section class="car-list list">
 
             <ul>
-                <li ng-repeat="upgrade in carUpgrade.currentPage">
-                    <div ng-click="upgrade(upgrade.id)">
+                <li ng-repeat="upgradeCar in carUpgrade.currentPage">
+                    <div ng-click="upgrade(upgradeCar.id)">
                         <h4>{{ upgrade.modelName }}</h4>
                         <span>+3 500 руб</span>
                     </div>
@@ -107,10 +107,10 @@
         <section class="addination-services service-list list">
 
             <ul>
-                <li class="selected" ng-repeat="upgrade in serviceUpgrade.currentPage">
+                <li class="selected" ng-repeat="serviceUpgrade in serviceUpgrade.currentPage">
                     <span>Расширенная гарантия</span>
 
-                    <div ng-click="show(upgrade.id)">
+                    <div ng-click="upgrade(serviceUpgrade.id)">
                         <h4>1 год → 2 года</h4>
                         <span>+ 32 000 руб</span>
                     </div>
@@ -313,7 +313,7 @@
 
 
 <div class="print">
-    <h2>{{data.calculation.car.markName}} {{data.calculation.car.modelName}} — {{data.calculation.car.price}} руб</h2>
+    <h2>Стоимость {{data.calculation.car.markName}} {{data.calculation.car.modelName}} — {{data.calculation.car.price}} руб</h2>
 </div>
 
 <div class="car-info">
@@ -492,6 +492,11 @@
 
 </section>
 <div class="noprint" ng-controller="OfferCtrl" ng-show="calculation.offer">
+    <div class="price-line noprint">
+        <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment }} = </h3>
+
+        <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
+    </div>
     <section class="services-choose">
         <h2>Дополнительные сервисы</h2>
 
@@ -574,14 +579,7 @@
 
     </section>
 
-
-    <div class="price-line noprint">
-        <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment }} = </h3>
-
-        <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
-    </div>
-
-    <section class="end-offer print">
+    <section class="end-offer">
         <h2>Стандартный</h2>
 
         <table>
